react + redux template

--- a/app/index.html
+++ b/app/index.html
@@ -8,13 +8,9 @@
   <body>
     <!-- build:remove -->
     <script>require('electron-connect').client.create()</script>
+    <p>Test: development environment</p>
     <!-- endbuild -->
-    <h1>Electron Template</h1>
-    <div id="content"></div>
-    <!-- build:remove -->
-    <p>development environment</p>
-    <!-- endbuild -->
+    <div id="react-root"></div>
     <script src='./public/js/main.js'></script>
-
   </body>
 </html>
